Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1324156: reminders have GMT time
 - Fixed bug 1324282: Import iCal US Holidays, wrong dates...
 - Added a simple stylesheet to upcoming.php
 - Patch 1306191: Allow users to import from Outlook 2003/XP CSV file
 - Patch 1307029: Various mispellings in app and documentation
 - Fixed bug 1283449: Participants able to edit entries they do not own
 - Fixed bug 1249018: orphaned rows after deleting a user
 - Fixed bug 1298551: Error in comment in upcoming.php
 - Fixed bug 1288923: Fix for bar width in print_entry_timebar
 - Patch 1302296: Updated Japanese translations and changes to charset
   settings for the updates.
 - Fixed bug: edit_entry.php use of default date was not being invoked
   when no date is passed in
 - Fixed bug: "Call to member function on a non-object" intermittent error
   when layers are in use (result from my_array_splice)
 - Fixed bug 1296294: Javascript error when saving with empty description on IE
 - Applied patch 1290583: No more crash in tz_import.php on install and fixed
   quoted int values in sql
 - Patch 1275638: minor typos in date formats
 - Patch 1275857: Added missing Romanian and Welsh from array in translate.php
 - Fixed bug 1276005: Events ending at midnight do not display properly
 - Fixed bug 1276729: v1.1 cal_mod_date/time not stored in GMT
 - Fixed bug 1276782: icalclient defaults to __public__ permissions
 - Fixed bug 1246913: cal_status incorrect when publish from iCal
 - Fixed bug 1276709: week_details.php broke in revision 1.31 and up
 - Implemented RFE 1209445: single-day untimed events appear before multi-day
 - Fixed bug 1265900: exportation to iCal. Newlines should not be escaped per RFC2445
 - Fixed bug 1265575: Bug in get_all_dates()
 - Fixed bug 1275972: First day of daily repeat missing
 - Added minical.php for using in iframe in external site
 - Fixed bug 1272390: publish.php broken in v1.1-CVS
 - Fixed bug 1259997: repeating events don't send reminder on last day