@@ -66,6 +66,8 @@ Version 1.1.0-CVS (?? ??? 2005)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Added new time range options for reports: next 14/30/60/90/180/365 days
+      This allows reports to show events starting with current date
     + Added a simple stylesheet to upcoming.php
     + Added patch 1306191: Allow users to import from Outlook 2003/XP CSV file
     + Added patch 1307029: Various mispellings in app and documentation
